[package]
name = "advent-2018"
version = "0.1.0"
authors = ["Philippe Laflamme <philippe.laflamme@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.2.10"
regex = "1"
bit-set = "0.5.1"
termion = "1.5.3"
ixlist = "0.1.0"
cached = "0.9.0"
itertools = "0.8.0"
enum-utils = "0.1.2"

pathfinding = "2.0.0"

lazy_static = "1.4.0"