[package]
name = "advent-2018"
version = "0.1.0"
authors = ["Philippe Laflamme <philippe.laflamme@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
regex = "1"
bit-set = "0.5.1"
termion = "1.5.3"
ixlist = "0.1.0"
cached = "0.34"
itertools = "0.10"
serde = { version = "1", features = ["derive"] }
serde_plain = "1"

pathfinding = "3"

lazy_static = "1.4.0"

z3 = "0.11.0"
